# fdf

./: .gitignore  42.fdf  42_color.fdf  CMakeLists.txt  Makefile  fdf.h  readme.md  test_oldc  test_oldh  testc  testh
get_next_line/: get_next_line.c  get_next_line.h
libft/: CMakeLists.txt  Makefile  ft_wdcounter.c  libft.h
src/: draw.c  draw1.c  draw2.c  fdf.c  ilver.c  keys.c  rasver.c  rasver1.c  read_file.c  rotate.c  utils.c  utils1.c  utils2.c
